# piculet

./: README.md  build.yaml  example-config.yaml  noxfile.py  piculet.py  pyproject.toml  test_pipeline.py
src/: piculet.py
tests/: test_pipeline.py
tests/pipelines/: build.yaml  last.yaml  test.yaml
tests/pipelines-fail/: fail.yaml  last.yaml  late.yaml
