[project]
name = "piculet"
version = "0.1.0"
authors = [
  { name="Fiona Klute", email="fiona.klute@gmx.de" },
]
description = "Tiny local CI engine"
license = { text="GPLv3+" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
]

[project.scripts]
'piculet' = 'piculet:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
pythonpath = 'src'
testpaths = ['tests']
addopts = ['--import-mode=importlib']

[tool.mypy]
exclude = [
    '^noxfile\.py$',
]
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[tool.coverage.run]
source = [
    '.',
    'tests',
]

[tool.coverage.paths]
source = [
    'src/',
    '.nox/test-*/lib/python*/site-packages/',
]
