[project]
name = 'piculet'
version = '0.1.0'
authors = [
  { name='Fiona Klute', email='fiona.klute@gmx.de' },
]
description = 'Tiny local CI engine'
readme = 'README.md'
license = { text='GPLv3+' }
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Testing',
]
dependencies = [
    'pyyaml',
    'toposort',
]

[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
]
typecheck = [
    'mypy',
    'types-PyYAML',
    'types-toposort',
]
argcomplete = [
    'argcomplete',
]

[project.scripts]
'piculet' = 'piculet:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/piculet.py']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
pythonpath = 'src'
testpaths = ['tests']
addopts = ['--import-mode=importlib']
log_cli = true
log_cli_level = 'INFO'

[tool.mypy]
exclude = [
    '^noxfile\.py$',
]
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[tool.coverage.run]
source = [
    'piculet',
    'tests',
]

[tool.coverage.paths]
source = [
    'src/',
    '.nox/**/site-packages/',
]
